--- a/index.html
+++ b/index.html
@@ -9,7 +9,48 @@
 </head>
 <body>
 
+  <header role="banner">
+    <h1>枯山水</h1>
+    <h2>Rock Gardens</h2>
+    <nav role="navigation">
+      <ul>
+        <li><a href="#">Viewing</a></li>
+        <li><a href="#">Gravel</a></li>
+        <li><a href="#">Symbolism</a></li>
+      </ul>
+      <img src="images/banner.svg" alt="">
+    </nav>
+  </header>
 
+  <main role="main">
+    <div>自然の親密な本質を模倣し、人生の真の意味を発見する。</div>
+    <div>Imitate the intimate essence of nature & discover the true meaning of life.</div>
+
+    <article class="viewing">
+      <h2>閲覧</h2>
+      <h3>Viewing</h3>
+      <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+      <a href="#">Learn more about Viewing</a>
+    </article>
+
+    <article class="gravel">
+      <h2>砂利</h2>
+      <h3>Gravel</h3>
+      <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+      <a href="#">Learn more about Gravel</a>
+    </article>
+
+    <article class="symbolism">
+      <h2>象徴主義</h2>
+      <h3>Symbolism</h3>
+      <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+      <a href="#">Learn more about Symbolism</a>
+    </article>
+  </main>
+
+  <footer role="contentinfo">
+    <p>© 794 Heian Period</p>
+  </footer>
 
 </body>
 </html>
