--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
         <li><a href="#">Symbolism</a></li>
       </ul>
     </nav>
+
+    <img src="images/banner.svg" alt="">
+
   </header>
 
-  <img src="images/banner.svg" alt="">
-  <div><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></div>
-  <div>Imitate the intimate essence of nature & discover the true meaning of life.</div>
+  <div>
+    <p><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
+    <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+  </div>
 
   <main role="main">
     <article class="viewing">
