--- a/index.html
+++ b/index.html
@@ -10,27 +10,33 @@
 <body>
 
   <header role="banner">
-    <h1><i lang="ja">枯山水</i></h1>
-    <h2>Rock Gardens</h2>
-    <nav role="navigation">
-      <ul>
-        <li><a href="#">Viewing</a></li>
-        <li><a href="#">Gravel</a></li>
-        <li><a href="#">Symbolism</a></li>
-      </ul>
-    </nav>
-
-    <img src="images/banner.svg" alt="">
-
+    <div class="logo">
+      <h1><i lang="ja">枯山水</i></h1>
+      <h2>Rock Gardens</h2>
+    </div>
+    <div class="nav-links">
+      <nav role="navigation">
+        <ul>
+          <li><a href="#">Viewing</a></li>
+          <li><a href="#">Gravel</a></li>
+          <li><a href="#">Symbolism</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <div>
-    <p><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
-    <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+  <img class="header-banner" src="images/banner.svg" alt="">
+
+  <div class="text-container">
+    <div class="japanese-text">
+      <p><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
+    </div>
+    <p class="words">Imitate the intimate essence of nature & discover the true meaning of life.</p>
   </div>
 
   <main role="main">
     <article class="viewing">
+      <img src="images/viewing.svg" alt="">
       <h2><i lang="ja">閲覧</i></h2>
       <h3>Viewing</h3>
       <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
@@ -38,6 +44,7 @@
     </article>
 
     <article class="gravel">
+      <img src="images/gravel.svg" alt="">
       <h2><i lang="ja">砂利</i></h2>
       <h3>Gravel</h3>
       <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
@@ -45,6 +52,7 @@
     </article>
 
     <article class="symbolism">
+      <img src="images/symbolism.svg" alt="">
       <h2><i lang="ja">象徴主義</i></h2>
       <h3>Symbolism</h3>
       <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
