Add code to index and css to match screenshot

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
       <img src="images/symbolism.svg" alt="">
       <h2><i lang="ja">象徴主義</i></h2>
       <h3>Symbolism</h3>
-      <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+      <p class="symbol">In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
       <a href="#">Learn more about Symbolism</a>
     </article>
+
   </main>
 
   <footer role="contentinfo">
